# busylight_m365_linux

./: .gitignore  README.md  busylight.py  config.json  pyproject.toml
busylight_m365_linux/: __init__.py  default_config.json  main.py
